<resources>
    <string name="app_name">arriveDAW</string>
    <string name="qr_code_img_description">QR code</string>
    <string name="app_description">For your (and everyone\'s) security, we require every \nperson entering the college to fill out the form at least the day before.\nYou will be able to generate your secure QR code, \nshowing it to the security office will grant you access tot he college building.\nWith this information we will be able to notify the right people in the case of a Covid case</string>
    <string name="unspecified">Also, we\'ll make loads of cash with your data</string>
    <string name="fillForm">Every field is required, please fill them before generating your QR code</string>
    <string name="question1">What best describes you or your primary reason for entering Dawson?</string>
    <string name="Registered_student">Registered Dawson student</string>
    <string name="Work">Work/employment or essential reasons</string>
    <string name="visit_friend">Visiting a friend</string>
    <string name="visit_college">Visit the college (future student)</string>
    <string name="other">Other</string>
    <string name="question2">How are you entering into Dawson?</string>
    <string name="question3">Student number</string>
    <string name="generate">Generate QR</string>
    <string name="metro_car_question">Number of the metro car</string>
    <string name="day_arrival_question">What day do you plan on arriving?</string>
    <string name="time_arrival_question">What time do you plan on arriving?</string>
    <string name="metro_car_error">Invalid metro car number</string>
    <string name="room_number_error">Invalid room number (valid example is "4H15")</string>


    <string-array name="dawson_wings">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
    </string-array>
    <string name="starting_metro">Starting metro line</string>
    <string-array name="metro_lines">
        <item>Yellow</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Blue</item>
    </string-array>
</resources>