<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--    <ImageView-->
<!--        android:id="@+id/QR_result"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:adjustViewBounds="true"-->
<!--        android:background="#FFFFFF"-->
<!--        android:contentDescription="@string/qr_code_img_description"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="1.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

    <ImageView
        android:id="@+id/QR_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="#FFFFFF"
        android:contentDescription="@string/qr_code_img_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="410dp"
        android:layout_height="63dp"
        android:text="ArriveDaw"
        android:background="#8a2be2"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_description_id"
        android:layout_width="389dp"
        android:layout_height="92dp"
        android:text="@string/app_description"
        android:textColor="#808080"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="@+id/QR_result"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/unspecified_id"
        android:layout_width="364dp"
        android:layout_height="26dp"
        android:text="@string/unspecified"
        android:textColor="#808080"
        android:textSize="11sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/app_description_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:id="@+id/fillForm_id"
        android:layout_width="371dp"
        android:layout_height="36dp"
        android:text="@string/fillForm"
        android:textColor="#808080"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/app_description_id"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />


    <ImageView
        android:id="@+id/icon_education_hat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/reason_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reason_question"
        app:srcCompat="@drawable/ic_baseline_school_24" />

    <TextView
        android:id="@+id/reason_question"
        android:layout_width="332dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="13dp"
        android:text="@string/question1"
        app:layout_constraintStart_toEndOf="@id/icon_education_hat"
        app:layout_constraintTop_toBottomOf="@+id/fillForm_id" />

    <RadioGroup
        android:layout_width="361dp"
        android:layout_height="223dp"
        android:layout_marginStart="44dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/QR_result"
        app:layout_constraintTop_toBottomOf="@+id/reason_question">

        <RadioButton
            android:id="@+id/Registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Registered_student" />

        <RadioButton
            android:id="@+id/Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Work" />

        <RadioButton
            android:id="@+id/friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/visit_friend" />

        <RadioButton
            android:id="@+id/college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/visit_college" />

        <RadioButton
            android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/other" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>